2005-01-09  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/StringContent/insertUndo.java,
	gnu/testlet/javax/swing/text/StringContent/removeUndo.java,
	gnu/testlet/javax/swing/text/StringContent/stickyPosition.java:
	New files.
	* gnu/testlet/javax/swing/text/StringContent/StringContentTest.java:
	Updated.

2005-01-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/text/NumberFormat/UK.java:
	(test): Test numbers, integers, currencies and percentiles
	in the UK locale.
	(setOptions): helper method to set up the number format instance
	
2005-01-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Package/getPackage.java (test): Check
	whether java.lang has a package.

2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/AbstractDocument/BranchElement/BranchElementTest.java:
	New testcases.

2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/PlainDocument/PlainDocumentTest.java:
	Added more testcases.

2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/SimpleTimeZone/equals.java:
	Reformatted to become readable.

2005-01-06  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/TimeZone/setID.java: New testcases.

2005-01-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/zip/ZipEntry/Size.java: New file.

	* gnu/testlet/locales/LocaleTest.java: Fixed more Latin-1
	characters.

2005-01-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* batch_run: Allow NATIVE to be set on the command line.  Set WM
	to /bin/true if metacity is not found.
	* choose: Include GUI tests by default.
	* choose-classes: Likewise.
	* gnu/testlet/java/awt/Robot/mouseMove.java: New test.
	* gnu/testlet/java/awt/Robot/mousePress.java: Likewise.
	* gnu/testlet/java/awt/Robot/constructors.java: Likewise.
	* gnu/testlet/java/awt/Robot/createScreenCapture.java: Likewise.
	* gnu/testlet/java/awt/Robot/getPixelColor.java: Likewise.